--- a/Copy_of_Self_Supervised_Learning_Demos.ipynb
+++ b/Copy_of_Self_Supervised_Learning_Demos.ipynb
@@ -27,8 +27,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-02T14:07:37.055475Z",
-     "start_time": "2024-11-02T14:07:36.931039Z"
+     "end_time": "2024-11-02T14:16:57.975443Z",
+     "start_time": "2024-11-02T14:16:57.845011Z"
     }
    },
    "cell_type": "code",
@@ -38,11 +38,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/yacineflici/Documents/master-vmi/s3/IFLCM010 Analyse d'images/TP5/self-supervised-learning/cs294-158-ssl\r\n"
+      "/Users/yacineflici/Documents/master-vmi/s3/IFLCM010 Analyse d'images/TP5/self-supervised-learning\r\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -54,8 +54,8 @@
     "collapsed": true,
     "outputId": "686c93a5-b4d4-4814-b0d9-4a12b612f5e0",
     "ExecuteTime": {
-     "end_time": "2024-11-02T14:07:17.080458Z",
-     "start_time": "2024-11-02T14:07:14.559570Z"
+     "end_time": "2024-11-02T14:17:00.571479Z",
+     "start_time": "2024-11-02T14:16:57.976880Z"
     }
    },
    "source": [
@@ -76,13 +76,13 @@
       "remote: Counting objects: 100% (189/189), done.\u001B[K\r\n",
       "remote: Compressing objects: 100% (136/136), done.\u001B[K\r\n",
       "remote: Total 611 (delta 115), reused 119 (delta 53), pack-reused 422 (from 1)\u001B[K\r\n",
-      "Receiving objects: 100% (611/611), 3.11 MiB | 17.82 MiB/s, done.\r\n",
+      "Receiving objects: 100% (611/611), 3.11 MiB | 18.54 MiB/s, done.\r\n",
       "Resolving deltas: 100% (424/424), done.\r\n",
       "Processing ./cs294-158-ssl\r\n",
       "  Preparing metadata (setup.py) ... \u001B[?25ldone\r\n",
       "\u001B[?25hBuilding wheels for collected packages: deepul_helper\r\n",
       "  Building wheel for deepul_helper (setup.py) ... \u001B[?25ldone\r\n",
-      "\u001B[?25h  Created wheel for deepul_helper: filename=deepul_helper-0.1.0-py3-none-any.whl size=25299 sha256=f8a7509edac4bfd095f6be8be7a2de708e474ec19c8a4df663399b6863e54663\r\n",
+      "\u001B[?25h  Created wheel for deepul_helper: filename=deepul_helper-0.1.0-py3-none-any.whl size=25299 sha256=c7054c3abb6be4491d3c32c3d38b2485ce2fdc512bcf4c041a75095363fe5716\r\n",
       "  Stored in directory: /Users/yacineflici/Library/Caches/pip/wheels/27/65/bb/0dc8707dcfdaaabf751e11d58033b281d8a07b2bf4adc98d6f\r\n",
       "Successfully built deepul_helper\r\n",
       "Installing collected packages: deepul_helper\r\n",
@@ -97,7 +97,7 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -480,11 +480,12 @@
     "id": "shrEf5ZqjkCn"
    },
    "source": [
+    "from deepul_helper.tasks.rotation import NetworkInNetwork, AlexNet\n",
     "import math\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
+    "import torch.nn.functional as Fpass\n",
     "\n",
     "\n",
     "class RotationPrediction(nn.Module):\n",
@@ -521,7 +522,7 @@
     "                nn.Linear(256 * 6 * 6, self.n_classes)\n",
     "            )\n",
     "        else:\n",
-    "            raise Exception('Unsupported dataset:', dataset)\n",
+    "            raise Exception('Unsupported dataset:', self.dataset)\n",
     "        return classifier\n",
     "\n",
     "    def forward(self, images):\n",
